--- a/ExerciseManager/src/main/resources/application.properties
+++ b/ExerciseManager/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://teamfourreal:cs5500@exercisemgmt.qdxcspp.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=appDB
+spring.data.mongodb.database=exerciseManager
 
