--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,12 +20,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn --batch-mode --update-snapshots verify
       
-    - name: List the current directory
-      run: ls -a
-      
-    - name: What is in the target folder?
-      run: |
-        cd target
-        ls -a
