--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,3 +21,37 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn --f ExerciseManager --batch-mode --update-snapshots verify
+    - name: Code Coverage
+      uses: 'actions/upload-artifact@v2'
+      with:
+          name: jacoco-report
+          path: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
+          
+    - name: Add coverage to PR
+      id: jacoco
+      uses: madrapps/jacoco-report@v1.2
+      with:
+        paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
+        token: ${{ secrets.GITHUB_TOKEN }}
+        min-coverage-overall: 50
+        min-coverage-changed-files: 50
+        title: Code Coverage
+        
+    - name: Save Coverage To Environment Variable
+      run: |
+        echo "TOTAL_COVERAGE=${{ steps.jacoco.outputs.coverage-overall }}" >> $GITHUB_ENV
+        echo "CHANGED_FILES_COVERAGE=${{ steps.jacoco.outputs.coverage-changed-files }}" >> $GITHUB_ENV
+        
+    - name: Print & Check Coverage Info
+      run: |
+        import os
+        import sys
+        print("Total Coverage: " + str(os.environ["TOTAL_COVERAGE"]))
+        print("Changed Files Coverage: " + str(os.environ["CHANGED_FILES_COVERAGE"]))
+        if float(os.environ["TOTAL_COVERAGE"]) < 80 or float(os.environ["CHANGED_FILES_COVERAGE"]) < 80:
+          print("Insufficient Coverage!")
+          sys.exit(-1) # Cause Status Check Failure due to noncompliant coverage
+        sys.exit(0)
+      shell: python
+
+     
