--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -2,44 +2,44 @@ name: build
 
 on:
   push:
-    branches; [main]
-    paths: ['**.java', '.github/workflows/jacoco.yml', 'pom.xml']
+    branches: [main]
+    paths: [ '**.java', '.github/workflows/jacoco.yml', 'pom.xml' ]
   pull_request:
     branches: [main]
   workflow_dispatch:
   
-  jobs:
-    jacoco-java-maven:
+jobs:
+  jacoco-java-maven:
     
-      run-on: ubuntu-latest
+    runs-on: ubuntu-latest
       
-      steps:
-      -name: Checkout
-       uses: actions/checkout@v3
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
        
-     -name: Set up JDK 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         distribution: 'adopt'
         java-version: '17'
         
-     -name: Build with Maven
-      run: mvn -B package -Pcoverage
+    - name: Build with Maven
+      run: mvn --f ExerciseManager -Pcoverage
       
-    -name: Generate Jacoco badge
-     id: jacoco
-     uses: cicirello/jacoco-badge-generator@v2
-     with:
-       badges-directory: badges
-       generate-branches-badge: true
-       generate-summary: true
+    - name: Generate Jacoco badge
+      id: jacoco
+      uses: cicirello/jacoco-badge-generator@v2
+      with:
+         badges-directory: badges
+         generate-branches-badge: true
+         generate-summary: true
        
-     -name: Log coverage percentages to workflow output
+    - name: Log coverage percentages to workflow output
       run: |
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
         echo "branches = ${{ steps.jacoco.outputs.branches }}"
         
-     -name: Upload jacoco coverage report as a workflow artifact
+    - name: Upload jacoco coverage report as a workflow artifact
       uses: actions/upload-artifact@v3
       with:
         name: jacoco-report
@@ -47,7 +47,7 @@ on:
         
         
         
-     -name: Comment on PR with coverage percentages
+    - name: Comment on PR with coverage percentages
       if: ${{ github.event_name == 'pull_request'}}
       run: |
         REPORT=$(<badges/coverage-summary.json)
@@ -60,7 +60,7 @@ on:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
-    -name: Get the coverage info
-     run: |
-       echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
-       echo "Changed files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
+    - name: Get the coverage info
+      run: |
+        echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
+        echo "Changed files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
