--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,10 @@ jobs:
       run: mvn --f ExerciseManager --batch-mode --update-snapshots verify
       
       
-      
+    
+    - name: Generate Coverage Report
+      run: |
+        mvn --f ExerciseManager --file pom.xml
       
       
     - name: Code Coverage
