--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
     
     - name: Generate Coverage Report
       run: |
-        mvn --f ExerciseManager --file pom.xml
+        mvn -B package --file pom.xml
       
       
     - name: Code Coverage
