--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
     
     - name: Generate Coverage Report
       run: |
-        mvn -B package --file pom.xml
+        mvn --file ExerciseManager/pom.xml
       
       
     - name: Code Coverage
