--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,14 +19,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn --f ExerciseManager --batch-mode --update-snapshots verify
+#     - name: Build with Maven
+#       run: mvn --f ExerciseManager --batch-mode --update-snapshots verify
       
       
     
     - name: Generate Coverage Report
       run: |
-        mvn --file ExerciseManager/pom.xml
+        mvn -B package --file pom.xml
       
       
     - name: Code Coverage
