--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-#     - name: Build with Maven
-#       run: mvn --f ExerciseManager --batch-mode --update-snapshots verify
+    - name: Build with Maven
+      run: mvn --f ExerciseManager --batch-mode --update-snapshots verify
       
       
     
