--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,21 +42,20 @@ jobs:
         paths: ${{ github.workspace }}/ExerciseManager/target/site/jacoco/jacoco.xml
         token: ${{ secrets.GITHUB_TOKEN }}
         min-coverage-overall: 70
-        min-coverage-changed-files: 70
+#         min-coverage-changed-files: 70
         title: Code Coverage
         
     - name: Save Coverage To Environment Variable
       run: |
         echo "TOTAL_COVERAGE=${{ steps.jacoco.outputs.coverage-overall }}" >> $GITHUB_ENV
-        echo "CHANGED_FILES_COVERAGE=${{ steps.jacoco.outputs.coverage-changed-files }}" >> $GITHUB_ENV
+#         echo "CHANGED_FILES_COVERAGE=${{ steps.jacoco.outputs.coverage-changed-files }}" >> $GITHUB_ENV
         
     - name: Print & Check Coverage Info
       run: |
         import os
         import sys
         print("Total Coverage: " + str(os.environ["TOTAL_COVERAGE"]))
-        print("Changed Files Coverage: " + str(os.environ["CHANGED_FILES_COVERAGE"]))
-        if float(os.environ["TOTAL_COVERAGE"]) < 70 or float(os.environ["CHANGED_FILES_COVERAGE"]) < 70:
+        if float(os.environ["TOTAL_COVERAGE"]) < 70:
           print("Insufficient Coverage!")
           sys.exit(-1) # Cause Status Check Failure due to noncompliant coverage
         sys.exit(0)
